# migratowl

./: .env.example  .gitignore  .licenserc.yaml  .markdownlint.yaml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev-setup.md  langgraph.json  pyproject.toml  renovate.json  roadmap.md  sandbox-fixes.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml
.github/requirements/: pip-audit.txt  semgrep.txt  zizmor.txt
.github/workflows/: ci.yml  migratowl-scan.yml  release.yml  scheduled.yml  scorecard.yml
docs/examples/: ci-only.yml  dependabot-scan.yml  with-migratowl-server.yml
k8s/: rbac-raw.yaml  rbac.yaml  sandbox-router.yaml  sandbox-template.yaml  warm-pool.yaml
k8s/runtime/: Dockerfile  main.py  requirements.lock.txt  requirements.txt
k8s/sandbox-router/: Dockerfile  requirements.txt
migratowl/: agent.py  changelog.py  config.py  http.py  observability.py  parsers.py  patches.py  registry.py
migratowl/agent/: __init__.py  factory.py  graph.py  sandbox.py  session_graph.py  subagents.py
migratowl/api/: helpers.py  jobs.py  main.py
migratowl/git/: formatter.py  github.py  gitlab.py  notify.py
migratowl/models/: schemas.py
tests/: conftest.py  test_changelog.py  test_config.py  test_http.py  test_observability.py  test_parsers.py  test_patches.py  test_registry.py
tests/agent/: test_factory.py  test_sandbox.py  test_session_graph.py  test_subagents.py
tests/api/: test_helpers.py  (+2 more)
(+23 files in other folders)
